[gd_scene load_steps=27 format=3 uid="uid://cw0t6b7tber43"]

[ext_resource type="Script" path="res://player_base.gd" id="1_5b4at"]
[ext_resource type="Texture2D" uid="uid://d4g8uw76cvohs" path="res://Character/Hairs/Back/HAIR-1.png" id="2_82b7c"]
[ext_resource type="Texture2D" uid="uid://xqsers551tma" path="res://Character/Heads/HEAD-1.png" id="3_md5om"]
[ext_resource type="Script" path="res://Features/Scripts/HairRear.gd" id="3_ok5d4"]
[ext_resource type="Texture2D" uid="uid://b1yuoymguq8c6" path="res://Character/Heads/HEAD-4.png" id="4_2jg0f"]
[ext_resource type="Texture2D" uid="uid://c54lnjeqoogwa" path="res://Character/Eyes/EYE-1.png" id="4_23dxi"]
[ext_resource type="Texture2D" uid="uid://bgad5xsf0c8sw" path="res://Character/Limbs/LIMB-2.png" id="5_0lnb3"]
[ext_resource type="Texture2D" uid="uid://btmy33tr3w63" path="res://Character/Pupils/PUPIL-1.png" id="5_8eesd"]
[ext_resource type="Script" path="res://Features/Scripts/Head.gd" id="5_s8jvh"]
[ext_resource type="Texture2D" uid="uid://dhetr46kstw1p" path="res://Character/Hands/HandFeet-4.png" id="6_da6su"]
[ext_resource type="Texture2D" uid="uid://bfq67e3innnms" path="res://Character/Brows/BROW-1.png" id="6_lbupt"]
[ext_resource type="Texture2D" uid="uid://brhomtsl0n1c4" path="res://Character/Mouths/MOUTH-1.png" id="6_rdihr"]
[ext_resource type="Script" path="res://Features/Scripts/EyeLeft.gd" id="7_8h1sq"]
[ext_resource type="Texture2D" uid="uid://b71svsvi5gl5t" path="res://Character/Limbs/LIMB-1.png" id="7_aq84n"]
[ext_resource type="Texture2D" uid="uid://cnqebcet36c6a" path="res://Character/Noses/NOSE-1.png" id="7_hcwi0"]
[ext_resource type="Texture2D" uid="uid://d27kg62e26h75" path="res://Character/Hairs/Front/HAIR-1.png" id="8_83vab"]
[ext_resource type="Texture2D" uid="uid://dmekrnrvasp73" path="res://Character/Feet/HandFeet-2.png" id="8_ot0pq"]
[ext_resource type="Script" path="res://Features/Scripts/PupilLeft.gd" id="9_tc1do"]
[ext_resource type="Script" path="res://Features/Scripts/EyeRight.gd" id="10_csn0o"]
[ext_resource type="Script" path="res://Features/Scripts/PupilRight.gd" id="11_gwoc1"]
[ext_resource type="Script" path="res://Features/Scripts/BrowLeft.gd" id="13_5tsuu"]
[ext_resource type="Script" path="res://Features/Scripts/BrowRight.gd" id="14_xtxll"]
[ext_resource type="Script" path="res://Features/Scripts/Mouth.gd" id="16_3q3ha"]
[ext_resource type="Script" path="res://Features/Scripts/Nose.gd" id="18_nrl8y"]
[ext_resource type="Script" path="res://Features/Scripts/HairFront.gd" id="20_47wnj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n51cc"]
radius = 157.0
height = 438.0

[node name="PlayerBase" type="CharacterBody2D"]
script = ExtResource("1_5b4at")
metadata/_edit_group_ = true

[node name="Head" type="CanvasGroup" parent="."]

[node name="HairRear" type="Sprite2D" parent="Head"]
self_modulate = Color(0.611765, 0.611765, 0.611765, 1)
texture = ExtResource("2_82b7c")
script = ExtResource("3_ok5d4")

[node name="Body" type="Sprite2D" parent="Head"]
self_modulate = Color(0, 0.137255, 0.137255, 1)
position = Vector2(2.08165e-12, 250)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_2jg0f")

[node name="UpperArmLeft" type="Sprite2D" parent="Head/Body"]
modulate = Color(1, 0.729412, 0.596078, 1)
position = Vector2(-160, -100)
texture = ExtResource("5_0lnb3")

[node name="LowerArmLeft" type="Sprite2D" parent="Head/Body/UpperArmLeft"]
position = Vector2(2.08165e-12, 150)
texture = ExtResource("5_0lnb3")

[node name="HandLeft" type="Sprite2D" parent="Head/Body/UpperArmLeft/LowerArmLeft"]
position = Vector2(-10, 170)
rotation = 1.5708
texture = ExtResource("6_da6su")
flip_v = true

[node name="UpperArmRight" type="Sprite2D" parent="Head/Body"]
modulate = Color(1, 0.729412, 0.596078, 1)
position = Vector2(160, -100)
texture = ExtResource("5_0lnb3")

[node name="LowerArmRight" type="Sprite2D" parent="Head/Body/UpperArmRight"]
position = Vector2(2.08165e-12, 150)
texture = ExtResource("5_0lnb3")

[node name="HandRight" type="Sprite2D" parent="Head/Body/UpperArmRight/LowerArmRight"]
position = Vector2(15, 170)
rotation = 1.5708
texture = ExtResource("6_da6su")

[node name="UpperLegLeft" type="Sprite2D" parent="Head/Body"]
modulate = Color(1, 0.729412, 0.596078, 1)
show_behind_parent = true
position = Vector2(-80, 250)
texture = ExtResource("7_aq84n")

[node name="LowerLegLeft" type="Sprite2D" parent="Head/Body/UpperLegLeft"]
show_behind_parent = true
position = Vector2(2.08165e-12, 170)
texture = ExtResource("7_aq84n")

[node name="FootLeft" type="Sprite2D" parent="Head/Body/UpperLegLeft/LowerLegLeft"]
show_behind_parent = true
position = Vector2(50, 100)
texture = ExtResource("8_ot0pq")

[node name="UpperLegRight" type="Sprite2D" parent="Head/Body"]
modulate = Color(1, 0.729412, 0.596078, 1)
show_behind_parent = true
position = Vector2(80, 250)
texture = ExtResource("7_aq84n")

[node name="LowerLegRight" type="Sprite2D" parent="Head/Body/UpperLegRight"]
show_behind_parent = true
position = Vector2(2.08165e-12, 170)
texture = ExtResource("7_aq84n")

[node name="FootRight" type="Sprite2D" parent="Head/Body/UpperLegRight/LowerLegRight"]
show_behind_parent = true
position = Vector2(50, 100)
texture = ExtResource("8_ot0pq")

[node name="Head" type="Sprite2D" parent="Head"]
texture = ExtResource("3_md5om")
script = ExtResource("5_s8jvh")

[node name="EyeLeft" type="Sprite2D" parent="Head"]
texture = ExtResource("4_23dxi")
flip_h = true
script = ExtResource("7_8h1sq")

[node name="PupilLeft" type="Sprite2D" parent="Head/EyeLeft"]
texture = ExtResource("5_8eesd")
script = ExtResource("9_tc1do")

[node name="EyeRight" type="Sprite2D" parent="Head"]
texture = ExtResource("4_23dxi")
script = ExtResource("10_csn0o")

[node name="PupilRight" type="Sprite2D" parent="Head/EyeRight"]
texture = ExtResource("5_8eesd")
script = ExtResource("11_gwoc1")

[node name="BrowLeft" type="Sprite2D" parent="Head"]
texture = ExtResource("6_lbupt")
flip_h = true
script = ExtResource("13_5tsuu")

[node name="BrowRight" type="Sprite2D" parent="Head"]
texture = ExtResource("6_lbupt")
script = ExtResource("14_xtxll")

[node name="Mouth" type="Sprite2D" parent="Head"]
texture = ExtResource("6_rdihr")
script = ExtResource("16_3q3ha")

[node name="Nose" type="Sprite2D" parent="Head"]
modulate = Color(1, 0.937255, 0.698039, 1)
texture = ExtResource("7_hcwi0")
script = ExtResource("18_nrl8y")

[node name="HairFront" type="Sprite2D" parent="Head"]
modulate = Color(1, 0.937255, 0.698039, 1)
texture = ExtResource("8_83vab")
script = ExtResource("20_47wnj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.08165e-12, 310)
shape = SubResource("CapsuleShape2D_n51cc")

[connection signal="brow_change" from="." to="." method="_on_brow_change"]
[connection signal="ear_change" from="." to="." method="_on_ear_change"]
[connection signal="eye_change" from="." to="." method="_on_eye_change"]
[connection signal="hair_front_change" from="." to="." method="_on_hair_front_change"]
[connection signal="hair_rear_change" from="." to="." method="_on_hair_rear_change"]
[connection signal="head_change" from="." to="." method="_on_head_change"]
[connection signal="mouth_change" from="." to="." method="_on_mouth_change"]
[connection signal="nose_change" from="." to="." method="_on_nose_change"]
[connection signal="pupil_change" from="." to="." method="_on_pupil_change"]
[connection signal="randomize_character" from="." to="." method="_on_randomize_character"]
[connection signal="change_request" from="Head/HairRear" to="Head/HairRear" method="_on_change_request"]
[connection signal="change_request" from="Head/Head" to="Head/Head" method="_on_change_request"]
[connection signal="change_request" from="Head/EyeLeft" to="Head/EyeLeft" method="_on_change_request"]
[connection signal="change_request" from="Head/EyeLeft/PupilLeft" to="Head/EyeLeft/PupilLeft" method="_on_change_request"]
[connection signal="change_request" from="Head/EyeRight" to="Head/EyeRight" method="_on_change_request"]
[connection signal="change_request" from="Head/EyeRight/PupilRight" to="Head/EyeRight/PupilRight" method="_on_change_request"]
[connection signal="change_request" from="Head/BrowLeft" to="Head/BrowLeft" method="_on_change_request"]
[connection signal="change_request" from="Head/BrowRight" to="Head/BrowRight" method="_on_change_request"]
[connection signal="change_request" from="Head/Mouth" to="Head/Mouth" method="_on_change_request"]
[connection signal="change_request" from="Head/Nose" to="Head/Nose" method="_on_change_request"]
[connection signal="change_request" from="Head/HairFront" to="Head/HairFront" method="_on_change_request"]
